2022-01-21  Mike Gorse  <mgorse@suse.com>

        Build failure with g++ 12: std::exchange undefined
        https://bugs.webkit.org/show_bug.cgi?id=235445

        Reviewed by Michael Catanzaro.

        * API/JSRetainPtr.h: Include <utility>

2022-01-21  Zan Dobersek  <zdobersek@igalia.com>

        [RISCV64] Add MacroAssemblerRISCV64 branch-testing operations
        https://bugs.webkit.org/show_bug.cgi?id=235442

        Reviewed by Yusuke Suzuki.

        Implement MacroAssemblerRISCV64 branch-testing operations. The branching
        instructions being intentionally simple in RISC-V, and with no status
        register, scratch register has to be used to hold the testing result
        and perform a branch based on its value. This will disallow use of these
        implementations from Air, but that has to be address inside Air itself.

        When performing tests for values that are smaller than 64 bits in width,
        the tested value is zero-extended or, when necessary, loaded as an
        unsigned value, to impose zeroed upper bits that eliminate masking
        values that are too wide or get sign-extended when used as immediates.
        Post-masking, these shorter-width values still have to be sign-extended
        to accommodate branch instructions that are used when testing
        signedness.

        The test result value is then passed on, along with the desired
        condition, to the new branchTestFinalize() helper method that finally
        generates the appropriate branch.

        * assembler/MacroAssemblerRISCV64.h:
        (JSC::MacroAssemblerRISCV64::branchTest8):
        (JSC::MacroAssemblerRISCV64::branchTest16):
        (JSC::MacroAssemblerRISCV64::branchTest32):
        (JSC::MacroAssemblerRISCV64::branchTest64):
        (JSC::MacroAssemblerRISCV64::branchPtr):
        (JSC::MacroAssemblerRISCV64::branchTestFinalize):

2022-01-21  Zan Dobersek  <zdobersek@igalia.com>
